# tgame

./: .gitignore  Pmon.lua  conf.lua  cons_screen.lua  create_pmon.lua  debugui.lua  main.lua  player.lua  screen.lua  show_pmon.lua  systems.lua  ui.lua  utils.lua
osutils/: ]  main.lua  meson.build  meson_options.txt  osutils.c  osutils.h  windows-osutils.cpp  xdg-osutils.c  xdg-osutils.c.bak
osutils/.cache/clangd/index/: lapi.c.D0510639C215153A.idx  lapi.h.74DB69A084536E44.idx  lauxlib.c.768F75A1C803C3AA.idx  lauxlib.h.E0EA73B0D053290A.idx  lbaselib.c.4B909A80340C7022.idx  lcode.c.B3486C2176AED2BF.idx  lcode.h.0E4FEABEB761F049.idx  lcorolib.c.46CC58560078E606.idx  lctype.c.82BE86E5AEFC1CD5.idx  lctype.h.E4F5BAB7729EEB24.idx  ldblib.c.D20E424AAD9F0489.idx  ldebug.c.02BFC3965FE5559C.idx  ldebug.h.2C34D29952F6F7EE.idx  ldo.c.9EFB97FDA36799F1.idx  ldo.h.2E19077237AF62D5.idx  ldump.c.96C7BEC3A203C054.idx  lfunc.c.A05B358FAAB8B4E7.idx  lfunc.h.C96A98F0DB39F966.idx  lgc.c.05D95742BA41D257.idx  lgc.h.7199C7B95523711E.idx  linit.c.9269DFCB65695D40.idx  liolib.c.381EED50FB47613D.idx  ljumptab.h.3C78980C08312433.idx  llex.c.6AF3D00DE5FA1527.idx  llex.h.385A14B84C4FAC33.idx  llimits.h.071B0F0E2E2415A1.idx  lmathlib.c.DDB8C3B16EDEFAA1.idx  lmem.c.748817C0393E6328.idx  lmem.h.936FBB1C4C4535D7.idx  loadlib.c.1C29B5E80888662A.idx  lobject.c.F19E135114C05356.idx  lobject.h.24D5F781543AF61F.idx  lopcodes.c.9F7BF1A74E6A1A0E.idx  lopcodes.h.09D2F5568750AB0A.idx  loslib.c.6E4DF99697C084AF.idx  lparser.c.1F6076106F9573AE.idx  lparser.h.013ACE8CCB0CF854.idx  lprefix.h.FE60919D6CE2D41B.idx  (+29 more)
(+10 files in other folders)
